--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "history": "^4.6.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
